Typescript Error fixes

--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,11 @@
 .song-category-container::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
+
+* {
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+}
